# memory-assistant

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/agent/: loop_runner.rs  mod.rs  tool_registry.rs
src/db/: mod.rs
src/provider/: claude.rs  gemini.rs  mod.rs  model_registry.rs  openai_compat.rs  pool.rs  types.rs
src/skills/: mod.rs
src/telegram/: formatter.rs  handler.rs  mod.rs
src/tools/: datetime.rs  embedding.rs  entity_extractor.rs  file_extract.rs  knowledge.rs  memory.rs  mod.rs  system.rs
tests/: chunking_search.rs
