[package]
name = "memory-assistant"
version = "0.1.0"
edition = "2024"
description = "Memory Assistant - Telegram bot with Claude AI, knowledge base and entity extraction"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls"] }

# HTTP client (Claude API calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Base64 encoding (for image upload to Claude)
base64 = "0.22"

# Document parsing
pdf-extract = "0.10"
calamine = "0.26"
zip = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
